Se refactorizo Compra con VO y Mapper , pruebas unitarias